Image thumbnail content description

--- a/WordPressEditor/src/main/res/values/strings.xml
+++ b/WordPressEditor/src/main/res/values/strings.xml
@@ -74,5 +74,6 @@
     <string name="format_bar_description_ol">Ordered list</string>
     <string name="format_bar_description_html">HTML mode</string>
     <string name="visual_editor">Visual editor</string>
+    <string name="image_thumbnail">Image thumbnail</string>
 
 </resources>
