--- a/WordPressEditor/src/main/res/values/strings.xml
+++ b/WordPressEditor/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
     <string name="format_bar_description_bold">Bold</string>
     <string name="format_bar_description_italic">Italic</string>
     <string name="format_bar_description_underline">Underline</string>
-    <string name="format_bar_description_strike">Strike</string>
+    <string name="format_bar_description_strike">Strikethrough</string>
     <string name="format_bar_description_quote">Block quote</string>
     <string name="format_bar_description_link">Insert link</string>
     <string name="format_bar_description_more">Insert more</string>
