--- a/WordPressEditor/src/main/res/values/strings.xml
+++ b/WordPressEditor/src/main/res/values/strings.xml
@@ -81,4 +81,7 @@
     <string name="image_thumbnail">Image thumbnail</string>
 
 
+    <string name="editor_failed_uploads_switch_html">Some media uploads have failed. You can\'t switch to HTML mode
+        in this state. Remove all failed uploads and continue?</string>
+    <string name="editor_remove_failed_uploads">Remove failed uploads</string>
 </resources>
