--- a/WordPressEditor/src/main/res/values/strings.xml
+++ b/WordPressEditor/src/main/res/values/strings.xml
@@ -77,4 +77,6 @@
     <string name="editor_failed_uploads_switch_html">Some media uploads have failed. You can\'t switch to HTML mode
         in this state. Remove all failed uploads and continue?</string>
     <string name="editor_remove_failed_uploads">Remove failed uploads</string>
+
+    <string name="editor_dropped_text_error">Error occurred while dropping text</string>
 </resources>
