--- a/WordPressEditor/src/main/res/values/strings.xml
+++ b/WordPressEditor/src/main/res/values/strings.xml
@@ -52,11 +52,23 @@
     <string name="image_link_to">Link to</string>
     <string name="image_width">Width</string>
 
-    <string-array name="alignment_array">
-        <item>None</item>
-        <item>Left</item>
-        <item>Center</item>
-        <item>Right</item>
+    <string name="alignement_none">None</string>
+    <string name="alignement_left">Left</string>
+    <string name="alignement_center">Center</string>
+    <string name="alignement_right">Right</string>
+
+    <string-array name="alignment_key_array" translatable="false">
+        <item>none</item>
+        <item>left</item>
+        <item>center</item>
+        <item>right</item>
+    </string-array>
+
+    <string-array name="alignment_array" translatable="false">
+        <item>@string/alignement_none</item>
+        <item>@string/alignement_left</item>
+        <item>@string/alignement_center</item>
+        <item>@string/alignement_right</item>
     </string-array>
 
     <!-- Accessibility - format bar button descriptions -->
