--- a/WordPressEditor/src/main/res/values/strings.xml
+++ b/WordPressEditor/src/main/res/values/strings.xml
@@ -128,4 +128,10 @@
     <string name="stop_upload_dialog_button_yes">Yes</string>
     <string name="stop_upload_dialog_button_no">No</string>
 
+    <string name="retry_failed_upload_title">Retry uploading?</string>
+    <string name="retry_failed_upload_yes">Retry</string>
+    <string name="retry_failed_upload_remove">Remove</string>
+    <string name="retry_failed_upload_retry_all">Retry all</string>
+
+
 </resources>
