Show a progress dialog when tapping save when in HTML mode in GB.

--- a/WordPressEditor/src/main/res/values/strings.xml
+++ b/WordPressEditor/src/main/res/values/strings.xml
@@ -133,5 +133,7 @@
     <string name="retry_failed_upload_remove">Remove</string>
     <string name="retry_failed_upload_retry_all">Retry all</string>
 
+    <string name="long_post_dlg_saving">Saving</string>
+
 
 </resources>
